Slim recents: don't show content when device is locked
Some apps can view over the lockscreen while the device is locked.
In this scenario, you can press the recents button, which would
lead to a fully working slim recents (meaning you can view & clear
recents without unlocking), while AOSP recents would prompt you
to unlock first.

Also fix foreground color updating too late when changing bg color.

Change-Id: If3bd3f5f4e7d13a8e3cf00c9599bb6fdb14deb3c

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -21,4 +21,7 @@
     <!-- Sim recents -->
     <string name="recents_multiwin_nolastapp">No recent apps, open one</string>
     <string name="recents_killapp_warning">Long press to kill app</string>
+
+    <!-- Sim recents on keyguard -->
+    <string name="slim_recent_keyguard">Unlock your device to view recents</string>
 </resources>
