--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,10 +19,9 @@
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- Sim recents -->
-    <string name="recents_multiwin_nolastapp">No recent apps, open one</string>
     <string name="recents_killapp_warning">Long press to kill app</string>
-
-    <!-- Sim recents on keyguard -->
+    <string name="recents_multiwin_warning">A multiwindow session is already active.\nJust tap an app if you want to dock it now.</string>
+    <string name="recents_multiwin_nolastapp">You removed all recents, please choose an app from launcher or drawer.</string>
     <string name="slim_recent_keyguard">Unlock your device to view recents</string>
 
     <!-- Slim recents membar -->
