--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,7 +25,11 @@
     <string name="slim_recent_keyguard">Unlock your device to view recents</string>
     <string name="slim_recent_pinned">Unpin the screen to view recents</string>
 
+    <!-- Slim recents app sidebar queue app toast -->
+    <string name="toast_recents_queue_app">Launch %s after closing recents</string>
+    <string name="toast_recents_cancel_queued_app">Cancelled app launch</string>
+
     <!-- Slim recents membar -->
-    <string name="recents_free_ram">RAM: %1$d MB free</string>
+    <string name="slim_recents_free_ram">RAM: %1$d MB free</string>
 
 </resources>
