--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -29,4 +29,7 @@
     <!-- Slim recents membar -->
     <string name="slim_recents_free_ram">RAM: %1$d MB free</string>
 
+    <!-- TMP no native splitscreen -->
+    <string name="slim_no_native_splitscreen_yet">Splitscreen currently not supported in slim recents, falling back to AOSP recents</string>
+
 </resources>
